--- a/.github/workflows/1-basic.yaml
+++ b/.github/workflows/1-basic.yaml
@@ -8,6 +8,8 @@ jobs:
         name: Testing files
         runs-on: ubuntu-latest
         steps:
+            - name: reading repo files using actions
+              uses: actions/checkout@v4
             - name: listing files
               run: ls
             - name:  Read the file 
