--- a/.github/workflows/1-basic.yaml
+++ b/.github/workflows/1-basic.yaml
@@ -15,5 +15,5 @@ jobs:
                         echo "Welcome to Github Actions"
                         ls -la
                         cat index.html 
-            - name: ASCII Artwork
-              run: cowsay  -f  dragon   "Run for cover,   Dragon is there"
+            # - name: ASCII Artwork
+            #   run: cowsay  -f  dragon   "Run for cover,   Dragon is there"
