--- a/.github/workflows/4-multiplejobs.yaml
+++ b/.github/workflows/4-multiplejobs.yaml
@@ -12,12 +12,14 @@ jobs:
             - run: cowsay -f dragon "Run ,  dragon is there" >> dragon.txt
 
     test_job: 
+        needs: build_job
         runs-on: ubuntu-latest
         steps: 
             - name: greping the word dragon 
               run: grep -i dragon dragon.txt
 
     deploy_job: 
+        needs: [test_job] 
         runs-on: ubuntu-latest
         steps: 
             - run: cat dragon.txt
