--- a/.github/workflows/4-multiplejobs.yaml
+++ b/.github/workflows/4-multiplejobs.yaml
@@ -1,7 +1,7 @@
 name: Multiple Jobs in A Single Workflow
 
 on: 
-    push: 
+     workflow_dispatch: 
 
 jobs: 
     build_job: 
@@ -28,7 +28,7 @@ jobs:
               run: grep -i dragon dragon.txt
 
     deploy_job: 
-        needs: [test_job] 
+        needs: [test_job]
         runs-on: ubuntu-latest
         steps: 
             - uses: actions/download-artifact@v4
