--- a/.github/workflows/5-dockervariable.yml
+++ b/.github/workflows/5-dockervariable.yml
@@ -21,7 +21,7 @@ jobs:
         runs-on: ubuntu-latest
         concurrency: 
             cancel-in-progress: true
-            #group: mayank 
+            group: mayank 
         steps: 
             - name: running containers
               run: | 
