--- a/.github/workflows/5-dockervariable.yml
+++ b/.github/workflows/5-dockervariable.yml
@@ -20,11 +20,11 @@ jobs:
         needs: docker
         runs-on: ubuntu-latest
         concurrency: 
-            cancel-in-progress: true
+            cancel-in-progress: false
             group: mayank 
         steps: 
             - name: running containers
               run: | 
                         echo docker run -itd -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME
-                        sleep 6000
+                        sleep 600
 
