--- a/.github/workflows/5-dockervariable.yml
+++ b/.github/workflows/5-dockervariable.yml
@@ -1,6 +1,6 @@
 name: Exploring Vairables and Secrets
 on: 
-    push:
+    workflow_dispatch:
 env: 
     CONTAINER_REGISTRY: docker.io
     IMAGE_NAME: github-actions-nginx
